# flux-rs

./: Cargo.toml  README.md  example.env
src/: main.rs
src/commands/: config.rs  meta.rs  mod.rs  voice.rs
src/helpers/: db.rs  mod.rs  perms.rs  scheduler.rs
src/moderation/: purge.rs
src/structures/: data.rs
